--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ footer i:hover{
 }
 
 .web-design-landing{
-    background:url(../img/web\ development.jpg);
+    background:url(../img/website\ design.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
