--- a/css/style.css
+++ b/css/style.css
@@ -968,18 +968,25 @@ footer i:hover{
     background-repeat: no-repeat;
 }
 
+.consult-page{
+  background:url(../img/portfolio/2019-11-06-18-57-quanticalabs.com.png);
+   background-attachment: fixed;
+   background-size:cover;
+   background-repeat: no-repeat;
+}
+
 .plus-page{
     background:url(../img/portfolio/masterpluscleaning\ imac_front.png);
    background-attachment: fixed;
    background-size:cover;
    background-repeat: no-repeat;
 }
-.vega-page .plus-page img{
+.vega-page .plus-page .consult-page img{
     width:60vw;
     height:100%;
 }
 
-.vega .plus{
+.vega .plus .consult{
     /* background:url(../img/portfolio/vega\ gym\ 1.png);
     background-attachment: fixed;
     background-size:cover;
@@ -1001,6 +1008,7 @@ footer i:hover{
  .recent-work{
     background: #000;
     position: relative;
+    padding-bottom:3rem;
 } 
 
 /* .wrk{
@@ -1074,7 +1082,7 @@ footer i:hover{
   }
 
 
-.wrk:hover,
+/* .wrk:hover,
 .wrk-1:hover{
     background: #000;
     opacity:0.5;
@@ -1083,7 +1091,7 @@ footer i:hover{
     height:65vh;
     width:100%;
     transform: scaleX(0);
-}
+} */
 .gotopbtn{
     position: fixed;
     width: 50px;
